refactorization du code pour faire une archi propre